RESOLVED FIXED195916
WKWebView.GetContentsShouldReturnAttributedString is crashing on iOS Simulator
https://bugs.webkit.org/show_bug.cgi?id=195916
Summary WKWebView.GetContentsShouldReturnAttributedString is crashing on iOS Simulator
Timothy Hatcher
Reported 2019-03-18 15:43:16 PDT
Fix up the iOS code to not crash on UIColor. Make test pass.
Attachments
Patch (12.36 KB, patch)
2019-03-18 15:48 PDT, Timothy Hatcher
no flags
Patch (10.84 KB, patch)
2019-03-18 15:51 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2019-03-18 15:48:08 PDT
Timothy Hatcher
Comment 2 2019-03-18 15:51:31 PDT
WebKit Commit Bot
Comment 3 2019-03-18 16:54:44 PDT
Comment on attachment 365081 [details] Patch Clearing flags on attachment: 365081 Committed r243116: <https://trac.webkit.org/changeset/243116>
WebKit Commit Bot
Comment 4 2019-03-18 16:54:45 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-03-18 16:56:00 PDT
Note You need to log in before you can comment on or make changes to this bug.